[gd_scene load_steps=5 format=3 uid="uid://ge6covusp0d7"]

[ext_resource type="Script" path="res://scenes/structures/level_exit_door.gd" id="1_qxltq"]
[ext_resource type="PackedScene" uid="uid://cbrfrebvcck4x" path="res://scenes/structures/big_door.tscn" id="2_28vrb"]
[ext_resource type="PackedScene" uid="uid://bj3bleqx38o6h" path="res://scenes/areas/end_level_area.tscn" id="3_ufpwl"]
[ext_resource type="PackedScene" uid="uid://bqncdno4rb7be" path="res://scenes/lights/togglable_light.tscn" id="4_kwm2m"]

[node name="LevelExitDoor" type="Node2D"]
script = ExtResource("1_qxltq")

[node name="BigDoor" parent="." instance=ExtResource("2_28vrb")]

[node name="EndLevelArea" parent="." instance=ExtResource("3_ufpwl")]
position = Vector2(0, 311)
scale = Vector2(28.5462, 9.02624)

[node name="TogglableLight" parent="." instance=ExtResource("4_kwm2m")]
position = Vector2(-6, 331)
scale = Vector2(2.96, 1)
enabled = false
color = Color(0.556863, 1, 1, 1)
shadow_enabled = true
